--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "api-server",
+  "name": "videohunt-api-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "videohunt",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "connect-mongo": "^1.3.2",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "mongoose": "^4.11.0",
+    "serve-favicon": "^2.4.3"
   }
 }
