--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.0",
+    "mustache-express": "^1.2.5",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^2.2.1",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
