--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
+    "convict": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.0",
     "mustache-express": "^1.2.5",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^2.2.1",
     "serve-favicon": "^2.4.3"
