--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^2.2.1",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
