--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "videohunt-api-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "bin/www",
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www",
@@ -13,12 +13,12 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "connect-mongo": "^1.3.2",
+    "connect-mongo": "^3.2.0",
     "convict": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.11.0",
+    "mongoose": "^5.7.13",
     "mustache-express": "^1.2.5",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-nodemon": "^2.2.1",
     "nodemon": "^1.11.0"
   }
