--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.4.2",
     "nodemon": "^2.0.2"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
